# weekend-wiki

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
base/meta/: Database.md  Database.typ  Namespaces.md  Namespaces.typ  Permissions.md  Permissions.typ  Roles.md  Users.md  Users.typ  database.md  namespaces.md  roles.md  users.md
src/: control.rs  create.rs  diff.rs  document.rs  edit.rs  encoding.rs  errors.rs  index.rs  main.rs  page.rs  search.rs  view.rs
src/auth/: login.rs  logout.rs  mod.rs  namespace.rs  token.rs  user.rs
src/control/: mod.rs
src/history/: db.rs  delta.rs  diff.rs  mod.rs  view.rs
src/search/: context.rs  mod.rs
static/: control.html  create.html  index.html  login.html
templates/: edit.html  history.html  index.html  login_logout_header.html  search.html  search_bar.html  view.html
templates/css/: main.css
