[package]
name = "weekend"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.0"
slug = "0.1.4"
tantivy = "0.19.2"

[dependencies.axum]
git = "https://github.com/tokio-rs/axum"
rev = "b0eb7a24bc62c76d59d2a98117c27a4bdb11a34a"
features = ["form"]

[dependencies.axum-macros]
git = "https://github.com/tokio-rs/axum"
rev = "b0eb7a24bc62c76d59d2a98117c27a4bdb11a34a"

[dependencies.bincode]
git = "https://github.com/bincode-org/bincode"
tag = "v2.0.0-rc.3"

[dependencies.tokio]
version = "1.28"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocksdb]
version = "0.20.1"
features = ["serde"]

[build-dependencies]
quote = "1.0.26"
