[package]
name = "weekend"
version = "0.1.0"
edition = "2021"

[dependencies]
diff = "0.1.13"
futures = "0.3.28"
patch = "0.7.0"
slug = "0.1.4"
tantivy = "0.19.2"
thiserror = "1.0.40"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
unified-diff = "0.2.1"

[dependencies.axum]
git = "https://github.com/tokio-rs/axum"
rev = "b0eb7a24bc62c76d59d2a98117c27a4bdb11a34a"
features = ["form"]

[dependencies.axum-macros]
git = "https://github.com/tokio-rs/axum"
rev = "b0eb7a24bc62c76d59d2a98117c27a4bdb11a34a"

[dependencies.axum-extra]
git = "https://github.com/tokio-rs/axum"
rev = "b0eb7a24bc62c76d59d2a98117c27a4bdb11a34a"
features = ["typed-header"]

[dependencies.askama]
version = "0.12"
features = ["markdown"]

[dependencies.comrak]
version = "0.18.0"
default-features = false
features = []

[dependencies.bincode]
git = "https://github.com/bincode-org/bincode"
tag = "v2.0.0-rc.3"

[dependencies.tokio]
version = "1.28"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

# TODO: Use system lib.
[dependencies.rocksdb]
version = "0.21.0"
features = ["serde"]

[build-dependencies]
quote = "1.0.26"
