[package]
name = "weekend"
version = "0.1.0"
edition = "2021"

[dependencies]
diff = "0.1.13"
futures = "0.3.28"
password-hash = "0.5.0"
pbkdf2 = { version = "0.12.1", features = ["simple"] }
patch = "0.7.0"
slug = "0.1.4"
tantivy = "0.22"
thiserror = "1.0.40"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
unified-diff = "0.2.1"
sha2 = "0.10.6"
hmac = "0.12.1"
base58 = "0.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

typst = { git = "https://github.com/typst/typst" }
typst-html = { git = "https://github.com/typst/typst" }

[dependencies.axum]
version = "0.7"
features = ["form"]

[dependencies.axum-macros]
version = "0.4"

[dependencies.axum-extra]
version = "0.9"
features = ["typed-header"]

[dependencies.askama]
version = "0.12"
features = ["markdown"]

[dependencies.comrak]
version = "0.32"
default-features = false
features = []

[dependencies.bincode]
git = "https://github.com/bincode-org/bincode"
tag = "v2.0.0-rc.3"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]

# TODO: Use system lib.
[dependencies.rocksdb]
version = "0.23.0"
features = ["serde"]

[build-dependencies]
quote = "1"
